<resources>
    <string name="facebook_app_id">741678779339835</string>
    <string name="about_us">About us</string>


    <string name="app_name">Nearwander</string>
    <string name="button_text">Get Weather</string>
    <string name="title_activity_maps">Map</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="btn_forgot_pass">Send me a link</string>
    <string name="signUp">Sign up</string>
    <string name="login_button">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">nearwander</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="search">Search Place here</string>
    <string name="title_activity_navigation_drawable">NavigationDrawable</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_route_picker">RoutePicker</string>
    <string name="gps_network_not_enabled">We are unable to get your current location since your GPS is not enabled. You can either enable your GPS or fill your location manually.</string>
    <string name="open_location_settings">Enable GPS?</string>
    <string name="location_settings_cancel">Fill Manually</string>
    <string name="data_network_not_enabled">You are not connected to the internet. Do you want to enable now?</string>
    <string name="open_data_settings">Go to network settings</string>
    <string name="enable_data_network_cancel">Exit application</string>

    <string name="use_gps">Use GPS for location</string>
    <string name="use_wifi">Turn on Wi-Fi</string>
    <string name="improve_location_msg">This app wants to change your device settings:</string>
    <string name="poor_net">No or poor internet connection</string>
    <string name="server_error">Oops!! Something went wrong on server side.</string>
    <string name="try_again">Try again</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="title_activity_search">Search</string>

    <string name="title_activity_places">Places</string>
    <string name="title_activity_place_result">Places</string>

    <string name="no_location_detected">Cannot get location</string>
    <string name="location_updated_message">Updated Location</string>

    //Chat
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="edit_profile">Edit Profile</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
