<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nearwander.application.nearwander.SignupActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingTop="12dp"
            android:text="@string/signUp"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="30sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:orientation="vertical"
        android:layout_weight="0.44"
        tools:ignore="InefficientWeight">

        <EditText
            android:id="@+id/emailRegist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="128dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/emailRegist"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/passwordRegist"
            android:labelFor="@+id/passwordRegist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSignUpUser"
            android:onClick="btnSignUpUser_Click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:elevation="4dp"
            android:text="@string/signUp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@android:color/holo_orange_dark"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
